Fixed potion update effects